[gd_scene load_steps=15 format=2]

[ext_resource path="res://lavaland_icon.png" type="Texture" id=1]
[ext_resource path="res://Sprite.gd" type="Script" id=2]
[ext_resource path="res://ParallaxLayer2.gd" type="Script" id=3]
[ext_resource path="res://ParallaxLayer.gd" type="Script" id=4]
[ext_resource path="res://Map_select.gd" type="Script" id=5]
[ext_resource path="res://Pixilart Sprite Sheet starry sky.png" type="Texture" id=6]
[ext_resource path="res://shadown.png" type="Texture" id=7]
[ext_resource path="res://fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=8]

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ParallaxLayer/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "color_change"
length = 60.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ParallaxLayer/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5.5, 17.9, 24.6, 30.1, 38.3, 46, 54, 59.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 0.0784314, 1, 0, 1 ), Color( 0.0784314, 1, 0, 1 ), Color( 0.00784314, 0, 1, 1 ), Color( 0.00784314, 0, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=14]
size = 100
outline_size = 5
outline_color = Color( 0.243137, 0, 0.435294, 1 )
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:color:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:color:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:color:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath(".:color:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=10]
resource_name = "fade_in"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:color:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:color:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:color:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath(".:color:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}

[sub_resource type="Animation" id=11]
resource_name = "fade_out"
length = 0.3
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="MAP_SELECT" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -540.0
margin_top = -260.0
margin_right = 540.0
margin_bottom = 260.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1080.0
margin_bottom = 258.0
rect_clip_content = true
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 86.0
margin_right = 386.0
margin_bottom = 258.0
grow_vertical = 0
rect_min_size = Vector2( 150, 0 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Select" type="Button" parent="VBoxContainer/HBoxContainer/Sprite"]
anchor_right = 1.0
anchor_bottom = 1.0
action_mode = 0
button_mask = 7
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 390.0
margin_right = 690.0
margin_bottom = 258.0
rect_min_size = Vector2( 150, 0 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Select" type="Button" parent="VBoxContainer/HBoxContainer/Sprite2"]
anchor_right = 1.0
anchor_bottom = 1.0
action_mode = 0
button_mask = 7
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite3" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 694.0
margin_right = 994.0
margin_bottom = 258.0
rect_min_size = Vector2( 150, 0 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Select" type="Button" parent="VBoxContainer/HBoxContainer/Sprite3"]
anchor_right = 1.0
anchor_bottom = 1.0
action_mode = 0
button_mask = 7
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 262.0
margin_right = 1080.0
margin_bottom = 520.0
rect_clip_content = true
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_left = 86.0
margin_right = 386.0
margin_bottom = 258.0
grow_vertical = 0
rect_min_size = Vector2( 150, 0 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Select" type="Button" parent="VBoxContainer/HBoxContainer2/Sprite"]
anchor_right = 1.0
anchor_bottom = 1.0
action_mode = 0
button_mask = 7
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_left = 390.0
margin_right = 690.0
margin_bottom = 258.0
rect_min_size = Vector2( 150, 0 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Select" type="Button" parent="VBoxContainer/HBoxContainer2/Sprite2"]
anchor_right = 1.0
anchor_bottom = 1.0
action_mode = 0
button_mask = 7
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite3" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_left = 694.0
margin_right = 994.0
margin_bottom = 258.0
rect_min_size = Vector2( 150, 0 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Select" type="Button" parent="VBoxContainer/HBoxContainer2/Sprite3"]
anchor_right = 1.0
anchor_bottom = 1.0
action_mode = 0
button_mask = 7
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enable = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_mirroring = Vector2( 4970, 0 )
script = ExtResource( 4 )
speed = -1.0

[node name="Sprite" type="Sprite" parent="CanvasLayer/ParallaxBackground/ParallaxLayer"]
position = Vector2( 1694.13, 542.417 )
rotation = 1.5708
scale = Vector2( 0.092507, 9.94451 )
texture = ExtResource( 6 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_mirroring = Vector2( 4970, 0 )
script = ExtResource( 3 )
speed = -1.0

[node name="Sprite" type="Sprite" parent="CanvasLayer/ParallaxBackground/ParallaxLayer2"]
position = Vector2( 4160, 544 )
scale = Vector2( 3, 2.18 )
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ParallaxBackground"]
autoplay = "color_change"
playback_speed = 1.5
anims/RESET = SubResource( 12 )
anims/color_change = SubResource( 13 )

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -146.0
margin_top = -141.0
margin_right = 146.0
margin_bottom = -35.0
custom_fonts/font = SubResource( 14 )
text = "GO BACK"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 10

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer2/ColorRect"]
autoplay = "fade_in"
anims/RESET = SubResource( 9 )
anims/fade_in = SubResource( 10 )
anims/fade_out = SubResource( 11 )

[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/Sprite/Select" to="VBoxContainer/HBoxContainer/Sprite" method="_on_Select_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/Sprite/Select" to="VBoxContainer/HBoxContainer/Sprite" method="_on_Select_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Sprite/Select" to="." method="_on_Select_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/Sprite2/Select" to="VBoxContainer/HBoxContainer/Sprite2" method="_on_Select_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/Sprite2/Select" to="VBoxContainer/HBoxContainer/Sprite2" method="_on_Select_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Sprite2/Select" to="." method="_on_Select_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/Sprite3/Select" to="VBoxContainer/HBoxContainer/Sprite3" method="_on_Select_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/Sprite3/Select" to="VBoxContainer/HBoxContainer/Sprite3" method="_on_Select_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Sprite3/Select" to="." method="_on_Select_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer2/Sprite/Select" to="VBoxContainer/HBoxContainer2/Sprite" method="_on_Select_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer2/Sprite/Select" to="VBoxContainer/HBoxContainer2/Sprite" method="_on_Select_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Sprite/Select" to="." method="_on_Select_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer2/Sprite2/Select" to="VBoxContainer/HBoxContainer2/Sprite2" method="_on_Select_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer2/Sprite2/Select" to="VBoxContainer/HBoxContainer2/Sprite2" method="_on_Select_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Sprite2/Select" to="." method="_on_Select_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer2/Sprite3/Select" to="VBoxContainer/HBoxContainer2/Sprite3" method="_on_Select_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer2/Sprite3/Select" to="VBoxContainer/HBoxContainer2/Sprite3" method="_on_Select_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Sprite3/Select" to="." method="_on_Select_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="animation_finished" from="CanvasLayer2/ColorRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
